18-backgroung-slider/style.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');

*{
    box-sizing: border-box;
}

body{
    font-family: 'Roboto', sans-serif;
    display: flex;
    margin: 0;
    flex-direction: column;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
    align-items: center;
    background-image: url('https://images.unsplash.com/10/wii.jpg?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
    background-position: center center;
    background-size: cover;
    transition: 0.4s ease;
}

/* black shadow transparency covering image  */
body::before{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.7);
    z-index: -1;
}

/* slider container  */
.slider-container{
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    height: 70vh;
    width: 70vw;
    position: relative;
    overflow: hidden;
}

/* show/hide slide */
.slide {
    opacity: 0;
    height: 100vh;
    width: 100vw;
    background-position: center center;
    background-size: cover;
    position: absolute;
    top: -15wh;
    left: -15vw;
    transition: 0.4 ease;
    z-index: -1;
}

.slide.active{
    opacity: 1;
}

/* arrow properties */
.arrow{
    position: fixed;
    background-color: transparent;
    padding: 20px;
    font-size: 30px;
    border: 2x solid orange;
    top: 50%;
    transform: translateY(-50%);
    z-index: 100;
}

